# example-meta-txn

./: Cargo.toml  README.md  hardhat.config.ts  package-lock.json
blockchain/: README.md  hardhat.config.ts  package.json
blockchain/contracts/: CounterByAddress.sol  Forwarder.sol
blockchain/scripts/: deploy.ts  meta.ts
blockchain/test/: CounterByAddress.ts
blockchain/utils/: contract.ts
contracts/: Forwarder.sol
rust/: Cargo.toml
rust/examples/: direct.rs  meta.rs  meta_middleware.rs  meta_middleware_v2.rs
test/: CounterByAddress.ts
