[package]
name = "counter-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.12.5", features = ["full", "dyn-abi", "eip712"] }
async-trait = "*"
ethers = { version = "2.0", features = ["abigen"] }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
serde = "*"
thiserror = "*"

[workspace]
members = ["."]
